--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,12 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.mealsLoading {
+  text-align: center;
+  color: red;
+  font-weight: bold;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
